typescript/checker/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            749,
        ),
        hi: BytePos(
            757,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts:11:5
   |
11 | var callSig1: { num: (n: number) => string; };
   |     ^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            858,
        ),
        hi: BytePos(
            866,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts:13:5
   |
13 | var callSig2: { num: (n: number) => string; };
   |     ^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            950,
        ),
        hi: BytePos(
            958,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts:15:5
   |
15 | var callSig3: { num: (n: number) => string; };
   |     ^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1151,
        ),
        hi: BytePos(
            1158,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts:19:5
   |
19 | var getter1: { readonly x: string; }
   |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1326,
        ),
        hi: BytePos(
            1333,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts:23:5
   |
23 | var getter2: { readonly x: string; }
   |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1489,
        ),
        hi: BytePos(
            1496,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts:27:5
   |
27 | var setter1: { x: number };
   |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1636,
        ),
        hi: BytePos(
            1643,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/objectLiterals/objectLiteralGettersAndSetters.ts:31:5
   |
31 | var setter2: { x: any };
   |     ^^^^^^^

